Created workbook7 folder, added basic-queries exercise